Created grid layout with mobile first approach

--- a/Client/index.html
+++ b/Client/index.html
@@ -12,10 +12,13 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <p class="placeholder-text">placeholder-text</p>
-    <p class="dropdownList-text">dropdownList-text</p>
-    <p class="shortlink-text">shortlink-text</p>
+    <div class="grid-container">
+      <div class="grid main-grid">
+        <h1>Header</h1>
+      </div>
+      <div class="grid panel-grid">
+        <h2>Panel</h2>
+      </div>
+    </div>
   </body>
 </html>
