Modified gridlayout that scale and align properly

--- a/Client/index.html
+++ b/Client/index.html
@@ -13,11 +13,19 @@
   </head>
   <body>
     <div class="grid-container">
-      <div class="grid main-grid">
-        <h1>Header</h1>
-      </div>
       <div class="grid panel-grid">
-        <h2>Panel</h2>
+        <VStack>
+          <h2>Panel</h2>
+          <h2>Panel</h2>
+          <p class="shortlink-text">Panel</p>
+        </VStack>
+      </div>
+      <div class="grid main-grid">
+        <VStack>
+          <h1>Header</h1>
+          <h2>Main</h2>
+          <h2>Main</h2>
+        </VStack>
       </div>
     </div>
   </body>
