Added VStack elemtn to panel - and main grid, gave it some margin. Changed backround color as well

--- a/Client/index.html
+++ b/Client/index.html
@@ -14,18 +14,18 @@
   <body>
     <div class="grid-container">
       <div class="grid panel-grid">
-        <VStack>
+        <VStac class="VStack-panel">
           <h2>Panel</h2>
           <h2>Panel</h2>
           <p class="shortlink-text">Panel</p>
         </VStack>
       </div>
       <div class="grid main-grid">
-        <VStack>
+        <VStac class="VStack-main">
           <h1>Header</h1>
           <h2>Main</h2>
           <h2>Main</h2>
-        </VStack>
+        </VStac>
       </div>
     </div>
   </body>
