added the app.js to the script

--- a/Client/index.html
+++ b/Client/index.html
@@ -16,8 +16,7 @@
       <div class="grid panel-grid">
         <VStac class="VStack-panel">
           <h2>Panel</h2>
-          <h2>Panel</h2>
-          <p class="shortlink-text">Panel</p>
+          <div id="shortlinks"></div>
         </VStack>
       </div>
       <div class="grid main-grid">
@@ -28,5 +27,9 @@
         </VStac>
       </div>
     </div>
+    <script type="module" src="./app.js"></script>
+
+    
+
   </body>
 </html>
